fix logo stretching

--- a/src/deni-react-treeview-item/deni-react-treeview-item.scss
+++ b/src/deni-react-treeview-item/deni-react-treeview-item.scss
@@ -263,7 +263,7 @@
         .logo {
           width: $image-width;
           height: $image-height;
-              
+          object-fit: cover;    
         }
       }
 
